[package]
name = "corentin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
pin-project = "1"
tinyset = "0.4"
oneshot = { version = "0.1", default-features = false }
thread_local = "1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
